Fix nav inline style leak on mobile→desktop resize; update conversation log
Clear all inline styles from nav on mode change to prevent mobile burger
fade transition from overriding desktop submenu height animation.

--- a/web/themes/custom/customsolent/css/menu-mobile.css
+++ b/web/themes/custom/customsolent/css/menu-mobile.css
@@ -70,9 +70,7 @@
     /*height: 64px; */
   }
 
-  nav[role=navigation] {
-    transition: opacity 0.5s ease;
-  }
+  nav[role=navigation] {}
 
   .main-menu-item-container>li {
     display: block;
